Hoja de vida inicial

--- a/index.html
+++ b/index.html
@@ -2,30 +2,58 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ruwudu&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Curriculum Vitae de Bruce Wayne</title>
   </head>
   <body>
-    <h1>Curriculum Vitae de Bruce Wayne</h1>
-    <img src="images/Bruce_Wayne.jpg" />
-    <h2>Datos personales</h2>
-    <ul>
-      <li>Nombre completo: <strong>Bruce Wayne</strong></li>
-      <li>Fecha de nacimiento: <strong>1/5/1939</strong></li>
-      <li>Lugar de nacimiento: <strong>Gotham City</strong></li>
-    </ul>
+    <div id="contenedor-principal">
+      <div id="contenedor1">
+        <img src="images/Jose-Perez.jpg" />
+        <h2 class="subtitulo">DATOS PERSONALES</h2>
+        <ul id="datos">
+          <li>Nombre completo: <strong>Bruce Wayne</strong></li>
+          <li>Fecha de nacimiento: <strong>1/5/1939</strong></li>
+          <li>Lugar de nacimiento: <strong>Gotham City</strong></li>
+        </ul>
+      </div>
+      <div id="contenedor2">
+        <h1 id="nombre">JOSE FERNEY</h1>
+        <h1 id="apellido">PEREZ CAMACHO</h1>
+        <h2 class="subtitulo">FORMACION ACADEMICA</h2>
+        <div class="contenido-lista">
+          <p class="fecha">1956-1961</p>
+          <p>Universidad del Espantapájaros</p>
+        </div>
+        <div class="contenido-lista">
+          <p class="fecha">1952-1956</p>
+          <p>Instituto de Dos Caras</p>
+        </div>
+        <div class="contenido-lista">
+          <p class="fecha">1944-1952</p>
+          <p>Escuela Primaria del Joker</p>
+        </div>
 
-    <h2>Formación académica</h2>
-    <ul>
-      <li>1956-1961: <strong>Universidad del Espantapájaros</strong></li>
-      <li>1952-1956: <strong>Instituto de Dos Caras</strong></li>
-      <li>1944-1952: <strong>Escuela Primaria del Joker</strong></li>
-    </ul>
-
-    <h2>Experiencia laboral</h2>
-    <ul>
-      <li>1975-1985: <strong>En el paro</strong></li>
-      <li>1965-1975: <strong>Cazavillanos y demás chusma</strong></li>
-      <li>1962-1965: <strong>Aprendiz de superhéroe</strong></li>
-    </ul>
+        <h2 class="subtitulo">EXPERIENCIA LABORAL</h2>
+        <div class="contenido-lista">
+          <p class="fecha">1975-1985</p>
+          <p>En el paro</p>
+        </div>
+        <div class="contenido-lista">
+          <p class="fecha">1965-1975</p>
+          <p>Cazavillanos y demás chusma</p>
+        </div>
+        <div class="contenido-lista">
+          <p class="fecha">1962-1965</p>
+          <p>Aprendiz de superhéroe</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
