Se modifica tamano a la foto

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="images/Jose-Perez.jpg" />
         <h2 class="subtitulo">DATOS PERSONALES</h2>
         <ul id="datos">
-          <li>Nombre completo: <strong>Bruce Wayne</strong></li>
-          <li>Fecha de nacimiento: <strong>1/5/1939</strong></li>
-          <li>Lugar de nacimiento: <strong>Gotham City</strong></li>
+          <li>Nombre completo: <strong>Jose Ferney Perez Camacho</strong></li>
+          <li>Fecha de nacimiento: <strong>29 de Mayo de 1997</strong></li>
+          <li>Lugar de nacimiento: <strong>Popayan</strong></li>
         </ul>
       </div>
       <div id="contenedor2">
