Hoja de vida hasta 25/08

--- a/index.html
+++ b/index.html
@@ -10,49 +10,203 @@
       rel="stylesheet"
     />
 
-    <title>Curriculum Vitae de Bruce Wayne</title>
+    <title>Hoja de vida Jose Perez</title>
   </head>
   <body>
     <div id="contenedor-principal">
       <div id="contenedor1">
         <img src="images/Jose-Perez.jpg" />
-        <h2 class="subtitulo">DATOS PERSONALES</h2>
-        <ul id="datos">
-          <li>Nombre completo: <strong>Jose Ferney Perez Camacho</strong></li>
-          <li>Fecha de nacimiento: <strong>29 de Mayo de 1997</strong></li>
-          <li>Lugar de nacimiento: <strong>Popayan</strong></li>
-        </ul>
+        <h2 class="subtitulo">CONTACTO</h2>
+        <div class="datos">
+          <div class="fondo-icono">
+            <img
+              id="icono"
+              src="/images/correo-electronico.gif"
+              alt="No se encontro imagen"
+            />
+          </div>
+          <p class="info">josefepe29@gmail.com</p>
+        </div>
+        <div class="datos">
+          <div class="fondo-icono">
+            <img
+              id="icono"
+              src="/images/telefono.gif"
+              alt="No se encontro imagen"
+            />
+          </div>
+          <p class="info">+57 3178873843</p>
+        </div>
+        <div class="datos">
+          <div class="fondo-icono">
+            <img
+              id="icono"
+              src="/images/ubicacion.gif"
+              alt="No se encontro imagen"
+            />
+          </div>
+          <p class="info">Popayan - Cauca</p>
+        </div>
+        <h2 class="subtitulo">HABILIDADES</h2>
+        <div class="habilidades">
+          <p class="info-2">Comunicacion</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Diseño Web</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Comunicacion</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Comunicacion</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Comunicacion</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <h2 class="subtitulo">SOFTWARES</h2>
+        <div class="habilidades">
+          <p class="info-2">Visual Studio Code</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Git</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">GitHub</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">HTML</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">CSS</p>
+          <div class="fondo-habilidades"></div>
+        </div>
+        <br />
+        <h2 class="subtitulo">REDES SOCIALES</h2>
+        <div class="logos">
+          <a href="https://github.com/josefepe29" target="_blank">
+            <img
+              src="images/signo-de-github.png"
+              alt="No se encontro imagen"
+              class="logo"
+            />
+          </a>
+          <a href="https://www.instagram.com/josefepe29" target="_blank">
+            <img
+              src="images/instagram.png"
+              alt="No se encontro imagen"
+              class="logo"
+            />
+          </a>
+          <a href="https://www.linkedin.com/in/josefepe29" target="_blank">
+            <img
+              src="images/linkedin.png"
+              alt="No se encontro imagen"
+              class="logo"
+            />
+          </a>
+          <a href="https://twitter.com/josefepe2890" target="_blank">
+            <img
+              src="images/twitter.png"
+              alt="No se encontro imagen"
+              class="logo"
+            />
+          </a>
+        </div>
       </div>
       <div id="contenedor2">
         <h1 id="nombre">JOSE FERNEY</h1>
         <h1 id="apellido">PEREZ CAMACHO</h1>
+        <h2 class="subtitulo">INFORMACION PERSONAL</h2>
+        <div>
+          <p class="texto-info">
+            Estudiante de Desarrollo FullStack MERN con experiencia en atención
+            al cliente y gran sentido de responsabilidad así como alta vocación
+            de servicio. Soy una persona honesta, comprometida y dedicado a mis
+            labores, con buena actitud para el trabajo en equipo y con facilidad
+            para relacionarme en grupo. Como Estudiante/profesional me considero
+            analítico y proactivo, consiente del sentido de la urgencia y con
+            capacidad para el trabajo bajo presión.
+          </p>
+        </div>
         <h2 class="subtitulo">FORMACION ACADEMICA</h2>
         <div class="contenido-lista">
-          <p class="fecha">1956-1961</p>
-          <p>Universidad del Espantapájaros</p>
+          <p class="fecha">Agosto 2023 - Actualidad</p>
+          <p class="texto-2">
+            ADA School <br />
+            Desarrollo Javascript FullStack Web MERN
+          </p>
         </div>
+        <br />
+        <!-- <div class="contenido-lista">
+          <p class="fecha">Agosto 2014 - Diciembre 2021</p>
+          <p class="texto-2">
+            Universidad del Cauca <br />Completé 67 créditos de Ingenieria
+            Electronica y Telecomunicaciones
+          </p>
+        </div>
+        <br /> -->
         <div class="contenido-lista">
-          <p class="fecha">1952-1956</p>
-          <p>Instituto de Dos Caras</p>
+          <p class="fecha">Agosto 2009 - Junio 2014</p>
+          <p class="texto-2">Seminario Menor Arquidiocesano</p>
         </div>
-        <div class="contenido-lista">
-          <p class="fecha">1944-1952</p>
-          <p>Escuela Primaria del Joker</p>
-        </div>
-
+        <br />
         <h2 class="subtitulo">EXPERIENCIA LABORAL</h2>
         <div class="contenido-lista">
-          <p class="fecha">1975-1985</p>
-          <p>En el paro</p>
+          <p class="fecha">Noviembre 2022 - Julio 2023</p>
+          <p class="texto-2">
+            Auxiliar servicio al cliente<br />
+            Jangueo Granizados<br />
+            Servicio al cliente, manejo de caja y venta de productos a base de
+            alcohol
+          </p>
         </div>
+        <br />
         <div class="contenido-lista">
-          <p class="fecha">1965-1975</p>
-          <p>Cazavillanos y demás chusma</p>
+          <p class="fecha">Agosto 2021 - Febrero 2022</p>
+          <p class="texto-2">
+            Auxiliar servicio al cliente<br />
+            Local Chips<br />
+            Atencion al cliente, manejo de caja y venta de productos
+            alimenticios
+          </p>
         </div>
+        <br />
         <div class="contenido-lista">
-          <p class="fecha">1962-1965</p>
-          <p>Aprendiz de superhéroe</p>
+          <p class="fecha">Diciembre 2015 - Abril 2016</p>
+          <p class="texto-2">
+            Auxiliar administrativo<br />
+            Parqueadero de transito<br />
+            Atencion al publico y manejo de finanzas
+          </p>
         </div>
+        <br />
+        <div class="contenido-lista">
+          <p class="fecha">Diciembre 2015 - Abril 2016</p>
+          <p class="texto-2">
+            Digitador<br />
+            Teleredes S.A<br />
+            Digitar inconsistencias de empresas
+          </p>
+        </div>
+        <br />
       </div>
     </div>
   </body>
