Configuracion de barra de habilidades y softwares

--- a/index.html
+++ b/index.html
@@ -50,53 +50,53 @@
         <h2 class="subtitulo">HABILIDADES</h2>
         <div class="habilidades">
           <p class="info-2">Comunicacion</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-habilidades-1"></div>
         </div>
         <br />
         <div class="habilidades">
           <p class="info-2">Diseño Web</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-habilidades-2"></div>
         </div>
         <br />
         <div class="habilidades">
-          <p class="info-2">Comunicacion</p>
-          <div class="fondo-habilidades"></div>
+          <p class="info-2">Edicion de Video</p>
+          <div id="fondo-habilidades-3"></div>
         </div>
         <br />
         <div class="habilidades">
-          <p class="info-2">Comunicacion</p>
-          <div class="fondo-habilidades"></div>
+          <p class="info-2">Mecanografia</p>
+          <div id="fondo-habilidades-4"></div>
         </div>
         <br />
         <div class="habilidades">
-          <p class="info-2">Comunicacion</p>
-          <div class="fondo-habilidades"></div>
+          <p class="info-2">Conduccion</p>
+          <div id="fondo-habilidades-5"></div>
         </div>
         <br />
         <h2 class="subtitulo">SOFTWARES</h2>
         <div class="habilidades">
           <p class="info-2">Visual Studio Code</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-softwares-1"></div>
         </div>
         <br />
         <div class="habilidades">
           <p class="info-2">Git</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-softwares-2"></div>
         </div>
         <br />
         <div class="habilidades">
           <p class="info-2">GitHub</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-softwares-3"></div>
         </div>
         <br />
         <div class="habilidades">
           <p class="info-2">HTML</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-softwares-4"></div>
         </div>
         <br />
         <div class="habilidades">
           <p class="info-2">CSS</p>
-          <div class="fondo-habilidades"></div>
+          <div id="fondo-softwares-5"></div>
         </div>
         <br />
         <h2 class="subtitulo">REDES SOCIALES</h2>
