Adicion de idiomas y formacion complementaria

--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
           <div id="fondo-softwares-5"></div>
         </div>
         <br />
+        <h2 class="subtitulo">IDIOMAS</h2>
+        <div class="habilidades">
+          <p class="info-2">Español</p>
+          <div id="fondo-idioma-1"></div>
+        </div>
+        <br />
+        <div class="habilidades">
+          <p class="info-2">Ingles</p>
+          <div id="fondo-idioma-2"></div>
+        </div>
+        <br />
         <h2 class="subtitulo">REDES SOCIALES</h2>
         <div class="logos">
           <a href="https://github.com/josefepe29" target="_blank">
@@ -165,7 +176,10 @@
         <br /> -->
         <div class="contenido-lista">
           <p class="fecha">Agosto 2009 - Junio 2014</p>
-          <p class="texto-2">Seminario Menor Arquidiocesano</p>
+          <p class="texto-2">
+            Seminario Menor Arquidiocesano <br />
+            Estudio de Basica Secundaria y Media Academica
+          </p>
         </div>
         <br />
         <h2 class="subtitulo">EXPERIENCIA LABORAL</h2>
@@ -204,6 +218,52 @@
             Digitador<br />
             Teleredes S.A<br />
             Digitar inconsistencias de empresas
+          </p>
+        </div>
+        <br />
+        <h2 class="subtitulo">FORMACION COMPLEMENTARIA</h2>
+        <div class="contenido-lista">
+          <p class="fecha">Abril 2022 - Mayo 2022</p>
+          <p class="texto-2">
+            Inspiring Study With Google<br />
+            80 Horas de estudio<br />
+            Progressio
+          </p>
+        </div>
+        <br />
+        <div class="contenido-lista">
+          <p class="fecha">Septiembre 2021 - Septiembre 2021</p>
+          <p class="texto-2">
+            Curso de Programacion Basica<br />
+            34 Horas de estudio<br />
+            Platzi
+          </p>
+        </div>
+        <br />
+        <div class="contenido-lista">
+          <p class="fecha">Septiembre 2021 - Septiembre 2021</p>
+          <p class="texto-2">
+            Semillero de Emprendimiento Digital - SEED<br />
+            Innpulsa Colombia
+          </p>
+        </div>
+        <br />
+        <div class="contenido-lista">
+          <p class="fecha">Junio 2021 - Junio 2021</p>
+          <p class="texto-2">
+            Curso de Desarrollo de Aplicaciones Web con Javascript<br />
+            7 Horas de estudio<br />
+            Udemy
+          </p>
+        </div>
+        <br />
+        <div class="contenido-lista">
+          <p class="fecha">Noviembre 2019 - Noviembre 2019</p>
+          <p class="texto-2">
+            Seminario Nacional de Tecnologias Emergentes en Telecomunicaciones
+            TET<br />
+            32 Horas de estudio<br />
+            Rama Estudiantil IEEE de la Universidad del Cauca
           </p>
         </div>
         <br />
