--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
           </p>
         </div>
         <br />
-        <!-- <div class="contenido-lista">
+        <div class="contenido-lista">
           <p class="fecha">Agosto 2014 - Diciembre 2021</p>
           <p class="texto-2">
             Universidad del Cauca <br />Completé 67 créditos de Ingenieria
             Electronica y Telecomunicaciones
           </p>
         </div>
-        <br /> -->
+        <br />
         <div class="contenido-lista">
           <p class="fecha">Agosto 2009 - Junio 2014</p>
           <p class="texto-2">
