--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <title>Hoja de vida Jose Perez</title>
   </head>
   <body>
-    <div id="contenedor-principal">
-      <div id="contenedor1">
-        <img src="images/Jose-Perez.jpg" />
+    <main id="contenedor-principal">
+      <section id="contenedor1">
+        <figure>
+          <figcaption>
+            <img src="images/Jose-Perez.jpg" />
+          </figcaption>
+        </figure>
         <h2 class="subtitulo">CONTACTO</h2>
         <div class="datos">
           <div class="fondo-icono">
@@ -141,7 +145,7 @@
             />
           </a>
         </div>
-      </div>
+      </section>
       <div id="contenedor2">
         <h1 id="nombre">JOSE FERNEY</h1>
         <h1 id="apellido">PEREZ CAMACHO</h1>
@@ -268,6 +272,6 @@
         </div>
         <br />
       </div>
-    </div>
+    </main>
   </body>
 </html>
