Uso de etiquetas semanticas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </figcaption>
         </figure>
         <h2 class="subtitulo">CONTACTO</h2>
-        <div class="datos">
+        <article class="datos">
           <div class="fondo-icono">
             <img
               id="icono"
@@ -30,8 +30,8 @@
             />
           </div>
           <p class="info">josefepe29@gmail.com</p>
-        </div>
-        <div class="datos">
+        </article>
+        <article class="datos">
           <div class="fondo-icono">
             <img
               id="icono"
@@ -40,8 +40,8 @@
             />
           </div>
           <p class="info">+57 3178873843</p>
-        </div>
-        <div class="datos">
+        </article>
+        <article class="datos">
           <div class="fondo-icono">
             <img
               id="icono"
@@ -50,72 +50,72 @@
             />
           </div>
           <p class="info">Popayan - Cauca</p>
-        </div>
+        </article>
         <h2 class="subtitulo">HABILIDADES</h2>
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Comunicacion</p>
           <div id="fondo-habilidades-1"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Diseño Web</p>
           <div id="fondo-habilidades-2"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Edicion de Video</p>
           <div id="fondo-habilidades-3"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Mecanografia</p>
           <div id="fondo-habilidades-4"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Conduccion</p>
           <div id="fondo-habilidades-5"></div>
-        </div>
+        </article>
         <br />
         <h2 class="subtitulo">SOFTWARES</h2>
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Visual Studio Code</p>
           <div id="fondo-softwares-1"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Git</p>
           <div id="fondo-softwares-2"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">GitHub</p>
           <div id="fondo-softwares-3"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">HTML</p>
           <div id="fondo-softwares-4"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">CSS</p>
           <div id="fondo-softwares-5"></div>
-        </div>
+        </article>
         <br />
         <h2 class="subtitulo">IDIOMAS</h2>
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Español</p>
           <div id="fondo-idioma-1"></div>
-        </div>
+        </article>
         <br />
-        <div class="habilidades">
+        <article class="habilidades">
           <p class="info-2">Ingles</p>
           <div id="fondo-idioma-2"></div>
-        </div>
+        </article>
         <br />
         <h2 class="subtitulo">REDES SOCIALES</h2>
-        <div class="logos">
+        <article class="logos">
           <a href="https://github.com/josefepe29" target="_blank">
             <img
               src="images/signo-de-github.png"
@@ -144,13 +144,13 @@
               class="logo"
             />
           </a>
-        </div>
+        </article>
       </section>
-      <div id="contenedor2">
+      <section id="contenedor2">
         <h1 id="nombre">JOSE FERNEY</h1>
         <h1 id="apellido">PEREZ CAMACHO</h1>
         <h2 class="subtitulo">INFORMACION PERSONAL</h2>
-        <div>
+        <article>
           <p class="texto-info">
             Estudiante de Desarrollo FullStack MERN con experiencia en atención
             al cliente y gran sentido de responsabilidad así como alta vocación
@@ -160,34 +160,34 @@
             analítico y proactivo, consiente del sentido de la urgencia y con
             capacidad para el trabajo bajo presión.
           </p>
-        </div>
+        </article>
         <h2 class="subtitulo">FORMACION ACADEMICA</h2>
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Agosto 2023 - Actualidad</p>
           <p class="texto-2">
             ADA School <br />
             Desarrollo Javascript FullStack Web MERN
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Agosto 2014 - Diciembre 2021</p>
           <p class="texto-2">
             Universidad del Cauca <br />Completé 67 créditos de Ingenieria
             Electronica y Telecomunicaciones
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Agosto 2009 - Junio 2014</p>
           <p class="texto-2">
             Seminario Menor Arquidiocesano <br />
             Estudio de Basica Secundaria y Media Academica
           </p>
-        </div>
+        </article>
         <br />
         <h2 class="subtitulo">EXPERIENCIA LABORAL</h2>
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Noviembre 2022 - Julio 2023</p>
           <p class="texto-2">
             Auxiliar servicio al cliente<br />
@@ -195,9 +195,9 @@
             Servicio al cliente, manejo de caja y venta de productos a base de
             alcohol
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Agosto 2021 - Febrero 2022</p>
           <p class="texto-2">
             Auxiliar servicio al cliente<br />
@@ -205,63 +205,63 @@
             Atencion al cliente, manejo de caja y venta de productos
             alimenticios
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Diciembre 2015 - Abril 2016</p>
           <p class="texto-2">
             Auxiliar administrativo<br />
             Parqueadero de transito<br />
             Atencion al publico y manejo de finanzas
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Diciembre 2015 - Abril 2016</p>
           <p class="texto-2">
             Digitador<br />
             Teleredes S.A<br />
             Digitar inconsistencias de empresas
           </p>
-        </div>
+        </article>
         <br />
         <h2 class="subtitulo">FORMACION COMPLEMENTARIA</h2>
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Abril 2022 - Mayo 2022</p>
           <p class="texto-2">
             Inspiring Study With Google<br />
             80 Horas de estudio<br />
             Progressio
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Septiembre 2021 - Septiembre 2021</p>
           <p class="texto-2">
             Curso de Programacion Basica<br />
             34 Horas de estudio<br />
             Platzi
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Septiembre 2021 - Septiembre 2021</p>
           <p class="texto-2">
             Semillero de Emprendimiento Digital - SEED<br />
             Innpulsa Colombia
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Junio 2021 - Junio 2021</p>
           <p class="texto-2">
             Curso de Desarrollo de Aplicaciones Web con Javascript<br />
             7 Horas de estudio<br />
             Udemy
           </p>
-        </div>
+        </article>
         <br />
-        <div class="contenido-lista">
+        <article class="contenido-lista">
           <p class="fecha">Noviembre 2019 - Noviembre 2019</p>
           <p class="texto-2">
             Seminario Nacional de Tecnologias Emergentes en Telecomunicaciones
@@ -269,9 +269,9 @@
             32 Horas de estudio<br />
             Rama Estudiantil IEEE de la Universidad del Cauca
           </p>
-        </div>
+        </article>
         <br />
-      </div>
+      </section>
     </main>
   </body>
 </html>
