Cambio de nombre de carpeta imagenes a assets y media queries

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section id="contenedor1">
         <figure>
           <figcaption>
-            <img src="images/Jose-Perez.jpg" />
+            <img src="assets/Jose-Perez.jpg" />
           </figcaption>
         </figure>
         <h2 class="subtitulo">CONTACTO</h2>
@@ -25,7 +25,7 @@
           <div class="fondo-icono">
             <img
               id="icono"
-              src="/images/correo-electronico.gif"
+              src="assets/correo-electronico.gif"
               alt="No se encontro imagen"
             />
           </div>
@@ -35,7 +35,7 @@
           <div class="fondo-icono">
             <img
               id="icono"
-              src="/images/telefono.gif"
+              src="assets/telefono.gif"
               alt="No se encontro imagen"
             />
           </div>
@@ -45,7 +45,7 @@
           <div class="fondo-icono">
             <img
               id="icono"
-              src="/images/ubicacion.gif"
+              src="assets/ubicacion.gif"
               alt="No se encontro imagen"
             />
           </div>
@@ -118,28 +118,28 @@
         <article class="logos">
           <a href="https://github.com/josefepe29" target="_blank">
             <img
-              src="images/signo-de-github.png"
+              src="assets/signo-de-github.png"
               alt="No se encontro imagen"
               class="logo"
             />
           </a>
           <a href="https://www.instagram.com/josefepe29" target="_blank">
             <img
-              src="images/instagram.png"
+              src="assets/instagram.png"
               alt="No se encontro imagen"
               class="logo"
             />
           </a>
           <a href="https://www.linkedin.com/in/josefepe29" target="_blank">
             <img
-              src="images/linkedin.png"
+              src="assets/linkedin.png"
               alt="No se encontro imagen"
               class="logo"
             />
           </a>
           <a href="https://twitter.com/josefepe2890" target="_blank">
             <img
-              src="images/twitter.png"
+              src="assets/twitter.png"
               alt="No se encontro imagen"
               class="logo"
             />
