adicion de nueva foto de perfil y mod al html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
       <section id="contenedor1">
         <figure>
           <figcaption>
-            <img src="assets/Jose-Perez.jpg" />
+            <img src="assets/Jose-Perez2.jpg" />
           </figcaption>
         </figure>
         <h2 class="subtitulo">CONTACTO</h2>
+        <article class="datos">
+          <div class="fondo-icono">
+            <img
+              id="icono"
+              src="assets/licencia-de-conducir.png"
+              alt="No se encontro imagen"
+            />
+          </div>
+          <p class="info">CC 1061800720</p>
+        </article>
         <article class="datos">
           <div class="fondo-icono">
             <img
